# turbopuffer-apigen

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: check.yml  deploy.yml
src/: codegen.rs  main.rs  util.rs
src/codegen/: csharp.rs  go.rs  java.rs  python.rs  shared.rs  typescript.rs
src/util/: codegen_buf.rs  log.rs
