[package]
name = "turbopuffer-apigen"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
itertools = "0.14.0"
monostate = "0.1.14"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
time = { version = "0.3.41", features = ["formatting", "macros"] }
